--- a/firework/index.html
+++ b/firework/index.html
@@ -12,21 +12,33 @@
 <body>
     <!-- header -->
     <header>
-        <h1 class="hide-elements">Minor eindopdracht: vuurwerkshow</h1>
+        <h1>Minor eindopdracht: vuurwerkshow</h1>
     </header>
 
     <main>
-        <h2 class="hide-elements">Vuurwerkshow content overzicht</h2>
-        <section>
-            <div></div>
-            <div></div>
-            <div></div>
-        </section>
+        <h2>Vuurwerkshow content overzicht</h2>
+        <input type="checkbox" id="fl" name="flareItem" checked>
+        <!-- background -->
+        <div></div>
+
+        <div></div>
+
+
+        <label for="fl">
+        </label>
+
+        <ul>
+            <li>test</li>
+            <li>hiii</li>
+        </ul>
+        <div></div>
+
+
     </main>
     <!-- footer -->
     <footer>
-        <!-- 
-        <p>&copy;2023 &dash; Thuan - Hoa Le </p> -->
+
+        <!-- <p>&copy;2023 &dash; Thuan - Hoa Le </p> -->
     </footer>
 </body>
 
