--- a/firework/index.html
+++ b/firework/index.html
@@ -18,14 +18,13 @@
     <main>
         <h2>Vuurwerkshow content overzicht</h2>
         <input type="checkbox" id="fl" name="flareItem" checked>
+        <label for="fl">
+        </label>
         <!-- background -->
         <div></div>
 
+        <!-- sun -->
         <div></div>
-
-
-        <label for="fl">
-        </label>
 
         <ul>
             <li>test</li>
