--- a/firework/index.html
+++ b/firework/index.html
@@ -17,7 +17,7 @@
 
     <main>
         <h2>Vuurwerkshow content overzicht</h2>
-        <input type="checkbox" id="fl" name="flareItem" checked>
+        <input type="checkbox" id="fl" value="flareItem">
         <label for="fl">
         </label>
         <!-- background -->
