--- a/firework/index.html
+++ b/firework/index.html
@@ -25,11 +25,18 @@
 
         <!-- sun -->
         <div></div>
+        <div></div>
 
-        <ul>
+        <!-- <ul>
             <li>test</li>
-            <li>hiii</li>
-        </ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul> -->
         <div></div>
 
 
