--- a/firework/index.html
+++ b/firework/index.html
@@ -1,44 +1,81 @@
 <!doctype html>
-<html lang="nl">
+<html lang="eng">
 
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="jouw naam">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Vuurwerkshow &mdash; Thuan-Hoa </title>
+    <title> Firework &mdash; Thuan-Hoa </title>
     <link href="styles/style.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- header -->
     <header>
-        <h1>Minor eindopdracht: vuurwerkshow</h1>
+        <h1>Minor final assignment: Firework show</h1>
     </header>
 
     <main>
-        <h2>Vuurwerkshow content overzicht</h2>
-        <input type="checkbox" id="fl" value="flareItem">
-        <label for="fl">
-        </label>
+
+        <h2>Firework content</h2>
+        <form>
+            <input type="checkbox" id="startAnimation" value="flareItem">
+            <label for="startAnimation">
+            </label>
+        </form>
+
         <!-- background -->
         <div></div>
 
         <!-- sun -->
         <div></div>
+
+        <!-- moon -->
         <div></div>
 
-        <!-- <ul>
-            <li>test</li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul> -->
+        <!-- firework from flare-->
         <div></div>
 
+        <!-- Cylinder-->
+        <div></div>
+
+        <!-- flare-->
+        <div></div>
+
+        <!-- firwork second -->
+        <div></div>
+        <div></div>
+
+        <!-- Cube -->
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <!-- mountain -->
+        <svg>
+            <polygon points="300,390 190,90 320,130 400,340" fill="#ad8d6f" />
+            <polygon points="0,340 108,190 194,100 201,120 301,390" fill="#ad8d6f" />
+            <polygon points="14,348 117,174 194,102 172,377" fill="#ad8d6f" fill-opacity="0.8" />
+            <polygon points="120,174 194,102 233,206 144,275" fill="#ad8d6f" fill-opacity="0.9" />
+
+            <polygon points="233,206 288,177 324,214" fill="#ad8d6f" />
+            <polygon points="233,206 324,214 247,245" fill="#ad8d6f" />
+            <polygon points="247,245 324,214 360,360" fill="#ad8d6f" />
+            <polygon points="324,214 288,177 350,210" fill="#ad8d6f" />
+            <polygon points="324,214 350,210 360,360" fill="#ad8d6f" />
+
+            <g>
+                <polygon points="108,190 170,40 194,100" fill="#71674b" />
+                <!-- top-->
+                <polygon points="170,40 234,6 260,70 288,178 194,102" fill="#71674b" />
+                <polygon points="234,6 290,80 320,132 288,178" fill="#71674b" />
+            </g>
+        </svg>
 
     </main>
     <!-- footer -->
