fix sun and moon

--- a/firework/index.html
+++ b/firework/index.html
@@ -42,7 +42,7 @@
         <!-- flare-->
         <div></div>
 
-        <!-- firwork second -->
+        <!-- firework second -->
         <div></div>
         <div></div>
 
