:sparkles: more firework

--- a/fireworkV2/index.html
+++ b/fireworkV2/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!-- header -->
+    <!-- Header -->
     <header>
         <h1>Minor final assignment: Firework show</h1>
     </header>
@@ -25,9 +25,45 @@
             </label>
         </form>
 
-        <!-- sun -->
+        <!-- sun & Moon -->
         <div></div>
 
+
+        <form>
+            <input type="checkbox" id="startFlare" value="flareItem">
+            <!-- Flare items-->
+            <label for="startFlare">
+            </label>
+        </form>
+
+        <!-- Firework from flare-->
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <form>
+            <input type="checkbox" id="startCylinder" value="cylinderItem">
+            <!-- Cylinder items-->
+            <label for="startCylinder">
+            </label>
+        </form>
+
+        <!-- Firework from cylinder bom -->
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
 
     </main>
 
