--- a/fireworkV2/index.html
+++ b/fireworkV2/index.html
@@ -28,6 +28,17 @@
         <!-- sun & Moon -->
         <div></div>
 
+        <!-- Rock -->
+        <svg viewBox="0 0 583.5 356.1">
+            <path
+                d="m0,313.5c10.9,13.9,21.8,27.8,32.7,41.6,174.9,3.9,217.5-5.7,218.8-16.4.8-6.8-15.1-11.4-30.8-31.9-18.3-23.7-22.8-51.2-23.6-71.9-12.2-18.6-24.9-29.5-33.9-36-23.4-16.8-39.2-15.7-49.7-32.9-11-17.9-4.9-33.4-10.8-35-10.4-3-32.3,46.6-74,127.6-12.1,23.5-22.2,42.6-28.7,54.9Z" />
+            <path d="m170.9,202l37.9-150L198.5.3l120,52.8,81.8,56.9,183.2,201.8-383.9,35.2-28.6-144.9Z" />
+            <path
+                d="m202.1,22.7l28.4,25.5,18.9-2.8-17,27.4,10.4,25.5,36.9.9s-9.7,14-2.8,18,17-.9,17-.9l.9,29.3,54.9.9c-14.9,24.5-49.7,63.6-44.7,73.6s29.8,19.1,44.7,28.6l-3.8,84.2,235.6-22.7-176.9-214.7-71-63.4s-13.7,1.8-26.5,2.8-31.2-12.3-31.2-12.3L197.3,0l4.7,22.7Z" />
+            <path
+                d="m83.5,153.2l35.1,76.4-27.9,65.8,57.4,24,7.2,36.2,90.3-2.8,28.4-18.4s-75.3-60.8-70.2-66.9c5-6.1-34-78.6-34-78.6-21.1-20.3-42.3-40.6-63.4-60.9-5.7,1.8-11.5,3.6-17.2,5.4-1.9,6.6-3.9,13.2-5.8,19.8Z" />
+        </svg>
+
 
         <form>
             <input type="checkbox" id="startFlare" value="flareItem">
@@ -57,6 +68,16 @@
             <li></li>
             <li></li>
             <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <!-- Cube -->
+        <ul>
             <li></li>
             <li></li>
             <li></li>
