--- a/fireworkFinal/index.html
+++ b/fireworkFinal/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="eng">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -76,8 +76,38 @@
             <li></li>
         </ul>
 
+        <form>
+            <input type="checkbox" id="startCube" value="cubeItem">
+            <!-- Cylinder items-->
+            <label for="startCube">
+            </label>
+        </form>
+
+        <form>
+            <input type="checkbox" id="startCube" value="cubeItem">
+            <!-- Cylinder items-->
+            <label for="startCube">
+            </label>
+        </form>
+
         <!-- Cube -->
         <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <!-- Firework from Cube bom -->
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
             <li></li>
             <li></li>
             <li></li>
