--- a/fireworkFinal/index.html
+++ b/fireworkFinal/index.html
@@ -80,13 +80,12 @@
             <input type="checkbox" id="startCube" value="cubeItem">
             <!-- Cylinder items-->
             <label for="startCube">
-            </label>
-        </form>
-
-        <form>
-            <input type="checkbox" id="startCube" value="cubeItem">
-            <!-- Cylinder items-->
-            <label for="startCube">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
             </label>
         </form>
 
